; ModuleID = '/home/carl/AnghaBench/linux/drivers/clocksource/extr_samsung_pwm_timer.c_samsung_clockevent_resume.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/clocksource/extr_samsung_pwm_timer.c_samsung_clockevent_resume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64, %struct.TYPE_3__, i32, i32 }
%struct.TYPE_3__ = type { i64 }
%struct.clock_event_device = type { i32 }

@pwm = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@REG_TINT_CSTAT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.clock_event_device*)* @samsung_clockevent_resume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @samsung_clockevent_resume(%struct.clock_event_device* %0) #0 {
  %2 = alloca %struct.clock_event_device*, align 8
  %3 = alloca i32, align 4
  store %struct.clock_event_device* %0, %struct.clock_event_device** %2, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 0), align 8
  %5 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 4), align 4
  %6 = call i32 @samsung_timer_set_prescale(i32 %4, i32 %5)
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 0), align 8
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 3), align 8
  %9 = call i32 @samsung_timer_set_divisor(i32 %7, i32 %8)
  %10 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 2, i32 0), align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %23

12:                                               ; preds = %1
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 0), align 8
  %14 = shl i32 1, %13
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = shl i32 %16, 5
  %18 = or i32 %15, %17
  %19 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @pwm, i32 0, i32 1), align 8
  %20 = load i64, i64* @REG_TINT_CSTAT, align 8
  %21 = add nsw i64 %19, %20
  %22 = call i32 @writel(i32 %18, i64 %21)
  br label %23

23:                                               ; preds = %12, %1
  ret void
}

declare dso_local i32 @samsung_timer_set_prescale(i32, i32) #1

declare dso_local i32 @samsung_timer_set_divisor(i32, i32) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
